# CurrencyConverter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  ConsoleApplication.cpp  ConsoleApplication.h  CppProperties.json  CurrencyConverter.sln  CurrencyTable.cpp  CurrencyTable.h  Director.h  HelpTable.cpp  HelpTable.h  Readme.md  Utils.h  main.cpp  vcpkg.json
CurrencyConverter/: Application.cpp  Application.h  ConsoleApplication.cpp  ConsoleApplication.h  Currency.h  CurrencyConverter.cpp  CurrencyConverter.vcxproj  CurrencyConverter.vcxproj.filters  CurrencyTable.cpp  CurrencyTable.h  CustomMacros.props  GAPP.h  HTTP.cpp  HTTP.h  HelpTable.cpp  HelpTable.h  ListParser.cpp  ListParser.h  Utils.cpp  resource.h
